build/tmp/compileFrcUserProgramReleaseExecutableFrcUserProgramCpp/output.txt
See file:///C:/Users/Admin/Desktop/Tantive%202020/build/tmp/compileFrcUserProgramReleaseExecutableFrcUserProgramCpp/output.txt for all output for compileFrcUserProgramReleaseExecutableFrcUserProgramCpp.
compiling Robot.cpp failed.
In file included from C:\Users\Admin\Desktop\Tantive 2020\src\main\include/Robot.h:5:0,
                 from C:\Users\Admin\Desktop\Tantive 2020\src\main\cpp\Robot.cpp:1:
C:\Users\Admin\Desktop\Tantive 2020\src\main\include/subsystems/chassis.h:31:8: error: 'SparkMax' in namespace 'rev' does not name a type
   rev::SparkMax::CAN Brushless{5};
        ^~~~~~~~
C:\Users\Admin\Desktop\Tantive 2020\src\main\include/subsystems/chassis.h:31:34: warning: extra ';' [-Wpedantic]
   rev::SparkMax::CAN Brushless{5};
                                  ^

compiling OurJoystick.cpp failed.
In file included from C:\Users\Admin\Desktop\Tantive 2020\src\main\cpp\subsystems\OurJoystick.cpp:3:0:
C:\Users\Admin\Desktop\Tantive 2020\src\main\include/subsystems/chassis.h:31:8: error: 'SparkMax' in namespace 'rev' does not name a type
   rev::SparkMax::CAN Brushless{5};
        ^~~~~~~~
C:\Users\Admin\Desktop\Tantive 2020\src\main\include/subsystems/chassis.h:31:34: warning: extra ';' [-Wpedantic]
   rev::SparkMax::CAN Brushless{5};
                                  ^

compiling chassis.cpp failed.
In file included from C:\Users\Admin\Desktop\Tantive 2020\src\main\cpp\subsystems\chassis.cpp:1:0:
C:\Users\Admin\Desktop\Tantive 2020\src\main\include/subsystems/chassis.h:31:8: error: 'SparkMax' in namespace 'rev' does not name a type
   rev::SparkMax::CAN Brushless{5};
        ^~~~~~~~
C:\Users\Admin\Desktop\Tantive 2020\src\main\include/subsystems/chassis.h:31:34: warning: extra ';' [-Wpedantic]
   rev::SparkMax::CAN Brushless{5};
                                  ^
C:\Users\Admin\Desktop\Tantive 2020\src\main\cpp\subsystems\chassis.cpp: In member function 'void Chassis::neogeo(double)':
C:\Users\Admin\Desktop\Tantive 2020\src\main\cpp\subsystems\chassis.cpp:36:5: error: 'Brushless' was not declared in this scope
     Brushless.SetPosition(999);
     ^~~~~~~~~

Finished compileFrcUserProgramReleaseExecutableFrcUserProgramCpp, see full log file:///C:/Users/Admin/Desktop/Tantive%202020/build/tmp/compileFrcUserProgramReleaseExecutableFrcUserProgramCpp/output.txt.
